src/elk/local-common/elasticsearch-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: smart-scrum-poker-elk-local-common
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          resources:
            requests:
              cpu: "500m"
              memory: "700Mi"
            limits:
              cpu: "1500m"
              memory: "2Gi"
