src/elk/local-common/kibana-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: smart-scrum-poker-elk-local-common
spec:
  template:
    spec:
      containers:
        - name: kibana
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
