src/elk/local-common/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: smart-scrum-poker-elk-local-common
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - kibana--smart-scrum-poker.localhost.balazskrizsan.com
      secretName: cert-localhost.balazskrizsan.com
  rules:
    - host: kibana--smart-scrum-poker.localhost.balazskrizsan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
